Fixed bug for overlap in header on smallest screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,58 @@ h6 {
     box-shadow: 0px 0px 10px 1px #133C55;
 }
 
+.block-under-header {
+    height: 75px;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    background: #C7B7A7;
+}
+
+.navbar-brand {
+    font-family: "Open Sans", sans-serif;
+    text-transform: uppercase;
+    color: #133C55;
+    letter-spacing: 2px;
+    font-weight: 600;
+    float: left;
+    font-size: 220%;
+    margin-left: 15px;
+    margin-right: 0;
+    position: fixed;
+}
+
+.fa-paw {
+    visibility: hidden;
+    width: 0;
+}
+
+.navbar-toggler {
+    margin-left: 65px;
+    margin-right: 15px;
+    width: 46px;
+    height: 46px;
+    border: 1px solid #133C55;
+    border-radius: 50px;
+}
+
+@media only screen and (min-width:350px) {
+    .navbar-brand {
+        margin-left: 30px;
+    }
+
+    .navbar-toggler {
+        margin-left: 50px;
+        margin-right: 30px;
+    }
+}
+
+@media only screen and (min-width: 600px) {
+    .fa-paw {
+        visibility: visible;
+    }
+}
+
 .navbar-collapse {
     background: #C7B7A7;
     text-align: right;
@@ -76,29 +128,6 @@ h6 {
     }
 }
 
-.navbar-brand {
-    font-family: "Open Sans", sans-serif;
-    text-transform: uppercase;
-    color: #133C55;
-    letter-spacing: 2px;
-    font-weight: 600;
-    float: left;
-    font-size: 220%;
-    margin-left: 30px;
-    position: fixed;
-}
-
-.fa-paw {
-    visibility: hidden;
-    width: 0;
-}
-
-@media only screen and (min-width: 600px) {
-    .fa-paw {
-        visibility: visible;
-    }
-}
-
 .nav-link {
     font-size: 110%;
     letter-spacing: 2px;
@@ -106,15 +135,6 @@ h6 {
     padding: 0 !important;
     margin-right: 30px;
     color: #133C55;
-}
-
-.navbar-toggler {
-    margin-left: 50px;
-    margin-right: 30px;
-    width: 46px;
-    height: 46px;
-    border: 1px solid #133C55;
-    border-radius: 50px;
 }
 
 /* Got the reaction from Ghafor Sabury on the following link to create my own hamburger icon: https://stackoverflow.com/questions/42586729/bootstrap-4-change-hamburger-toggler-color */
@@ -161,14 +181,6 @@ h6 {
     .active {
         border-bottom: 1px solid #133C55;
     }
-}
-
-.block-under-header {
-    height: 75px;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    background: #C7B7A7;
 }
 
 /*--------------------------------------------------Home section*/
